discussion/kv_engine/158220/158220_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36377: Replace KVStore::inTransaction

Currently KVStore::inTransaction attempts to guard proper usage of
the KVStore. It's not fit for allowing multiple flushers to run per
KVStore. Replace KVStore::inTransaction with an array of atmoic bools
that:

1) Keeps the same "guarding" of the KVStore API usage
2) Prevents concurrent flushing of the same vBucket

Change-Id: Ibe2c18f29150d059edb57b9cba6cc7577f539986

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-07-29 16:49:02.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-07-29 16:50:39.000000000
Message: 
Patch Set 3:

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-29 16:52:13.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38171/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38171/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32545/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32545/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/568/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12539/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12539/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12721/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12721/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13075/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13075/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20622/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20622/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10949/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "CouchKVStore::set");
                               ^~
                               .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:765:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "CouchKVStore::del");
                               ^~
                               .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore.cc:585:37: error: use of undeclared identifier "txnCtx" [clang-diagnostic-error]
    if (!inTransaction[getCacheSlot(txnCtx->vbid)]) {
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore.cc:589:17: error: use of undeclared identifier "txnCtx" [clang-diagnostic-error]
                txnCtx->vbid));
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:750:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "MagmaKVStore::set");
                               ^~
                               .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:950:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "MagmaKVStore::del");
                               ^~
                               .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.cc:665:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "RocksDBKVStore::set");
                               ^~
                               .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.cc:760:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "RocksDBKVStore::del");
                               ^~
                               .

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10949/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10949/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11655/ : FAILURE

Compile error at [2021-07-29T16:51:20.683Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: member reference type "TransactionContext" is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11655/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/554/ : FAILURE

Compile error at [2021-07-29T16:51:31.881Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: base operand of ?->? has non-pointer type ?TransactionContext?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/554/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9615/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
